--- a/src/express/templates/articles-by-category.pug
+++ b/src/express/templates/articles-by-category.pug
@@ -1,5 +1,10 @@
 extends ./layouts/layout
 
+block vars
+    - const bodyClass= ``
+    - const wrapperClass= `wrapper`
+    - const mainClass= `articles-category`
+
 block content
     h1 Бизнес
     section.articles-category__theme-list
@@ -41,7 +46,7 @@ block content
                     li.preview__breadcrumbs-item
                         a.preview__breadcrumbs-link(href='#') Дизайн
                 div.preview__background
-                    img.preview__background-image(src='img/skyscraper@1x.jpg', width='460', height='240', srcset='img/skyscraper@1x.jpg 1x, img/skyscraper@2x.jpg 2x', alt='Фотография небоскреба')
+                    img.preview__background-image(src='/img/skyscraper@1x.jpg', width='460', height='240', srcset='/img/skyscraper@1x.jpg 1x, img/skyscraper@2x.jpg 2x', alt='Фотография небоскреба')
                 time.preview__time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 h3.preview__name
                     a.preview__name-link(href='#') Я ничего не понял
@@ -57,7 +62,7 @@ block content
                     li.preview__breadcrumbs-item
                         a.preview__breadcrumbs-link(href='#') Дизайн
                 div.preview__background
-                    img.preview__background-image(src='img/sea@1x.jpg', width='460', height='240', srcset='img/sea@1x.jpg 1x, img/sea@2x.jpg 2x', alt='Фотография моря')
+                    img.preview__background-image(src='/img/sea@1x.jpg', width='460', height='240', srcset='/img/sea@1x.jpg 1x, img/sea@2x.jpg 2x', alt='Фотография моря')
                 time.preview__time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 h3.preview__name
                     a.preview__name-link(href='#') Путешествие в Голландию
@@ -92,7 +97,7 @@ block content
                     li.preview__breadcrumbs-item
                         a.preview__breadcrumbs-link(href='#') Удаленная работа
                 div.preview__background
-                    img(src='img/forest@1x.jpg', width='460', height='240', srcset='img/forest@1x.jpg 1x, img/forest@2x.jpg 2x', alt='Фотография леса')
+                    img(src='/img/forest@1x.jpg', width='460', height='240', srcset='/img/forest@1x.jpg 1x, img/forest@2x.jpg 2x', alt='Фотография леса')
                 time.preview__time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 h3.preview__name
                     a.preview__name-link(href='#') Я понял, но не все
