--- a/src/express/templates/comments.pug
+++ b/src/express/templates/comments.pug
@@ -1,12 +1,17 @@
 extends ./layouts/layout
 
+block vars
+    - const bodyClass= ``
+    - const wrapperClass= `wrapper wrapper--nobackground`
+    - const mainClass= `main-page main-page--padding`
+
 block content
     section.main-page__publication.publication
         h1.publication__title Комментарии
         ul.publication__list
             li.publication__list-item
                 div.publication__header
-                    img.publication__list-image(src='img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
+                    img.publication__list-image(src='/img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
                     b.publication__list-name Александр Петров
                     time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 a.publication__item-text(href='#')
@@ -17,7 +22,7 @@ block content
                     span.visually-hidden Закрыть строку списка
             li.publication__list-item
                 div.publication__header
-                    img.publication__list-image(src='img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
+                    img.publication__list-image(src='/img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
                     b.publication__list-name Александр Петров
                     time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 a.publication__item-text(href='#')
@@ -28,7 +33,7 @@ block content
                     span.visually-hidden Закрыть строку списка
             li.publication__list-item
                 div.publication__header
-                    img.publication__list-image(src='img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
+                    img.publication__list-image(src='/img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
                     b.publication__list-name Александр Петров
                     time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 a.publication__item-text(href='#')
@@ -39,7 +44,7 @@ block content
                     span.visually-hidden Закрыть строку списка
             li.publication__list-item
                 div.publication__header
-                    img.publication__list-image(src='img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
+                    img.publication__list-image(src='/img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
                     b.publication__list-name Александр Петров
                     time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 a.publication__item-text(href='#')
@@ -50,7 +55,7 @@ block content
                     span.visually-hidden Закрыть строку списка
             li.publication__list-item
                 div.publication__header
-                    img.publication__list-image(src='img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
+                    img.publication__list-image(src='/img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
                     b.publication__list-name Александр Петров
                     time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 a.publication__item-text(href='#')
@@ -61,7 +66,7 @@ block content
                     span.visually-hidden Закрыть строку списка
             li.publication__list-item
                 div.publication__header
-                    img.publication__list-image(src='img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
+                    img.publication__list-image(src='/img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
                     b.publication__list-name Александр Петров
                     time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 a.publication__item-text(href='#')
@@ -72,7 +77,7 @@ block content
                     span.visually-hidden Закрыть строку списка
             li.publication__list-item.publication__list-item--last
                 div.publication__header
-                    img.publication__list-image(src='img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
+                    img.publication__list-image(src='/img/avatar-small-2.png', width='20', height='20', alt='Аватар пользователя')
                     b.publication__list-name Александр Петров
                     time.publication__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
                 a.publication__item-text(href='#')
