--- a/src/express/templates/my.pug
+++ b/src/express/templates/my.pug
@@ -1,5 +1,10 @@
 extends ./layouts/layout
 
+block vars
+    - const bodyClass= ``
+    - const wrapperClass= `wrapper wrapper--nobackground`
+    - const mainClass= `main-page main-page--padding`
+
 block content
     section.main-page__notes.notes
         h1.notes__title Мои записи
