--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -1,5 +1,10 @@
 extends ./layouts/layout
 
+block vars
+    - const bodyClass= ``
+    - const wrapperClass= `wrapper`
+    - const mainClass= ``
+
 block content
     section.post
         h1.visually-hidden Пост
@@ -27,7 +32,7 @@ block content
                                 sup 13
                             button.themes__remove-btn(type='button') Удалить категорию
                 div.post__picture
-                    img(src='img/sea-fullsize@1x.jpg', alt='пейзаж море, скалы, пляж')
+                    img(src='/img/sea-fullsize@1x.jpg', alt='пейзаж море, скалы, пляж')
                 div.post__text
                     h3 Бирюзовое доверие
                     p
@@ -47,7 +52,7 @@ block content
                 ul.comments__list
                     li.comments__comment
                         div.comments__avatar.avatar
-                            img(src='img/avatar-1.png', alt='аватар пользователя')
+                            img(src='/img/avatar-1.png', alt='аватар пользователя')
                         div.comments__text
                             div.comments__head
                                 p Евгений Петров •
@@ -55,7 +60,7 @@ block content
                             p.comments__message Автор, ты все выдумал, покайся
                     li.comments__comment
                         div.comments__avatar.avatar
-                            img(src='img/avatar-5.png', alt='аватар пользователя')
+                            img(src='/img/avatar-5.png', alt='аватар пользователя')
                         div.comments__text
                             div.comments__head
                                 p Александр Марков •
@@ -66,7 +71,7 @@ block content
                                 | приложить усилия, чтобы разобраться — не все люди умеют выражать свои мысли.
                     li.comments__comment
                         div.comments__avatar.avatar
-                            img(src='img/avatar-4.png', alt='аватар пользователя')
+                            img(src='/img/avatar-4.png', alt='аватар пользователя')
                         div.comments__text
                             div.comments__head
                                 p Евгений Петров •
@@ -74,7 +79,7 @@ block content
                             p.comments__message Автор, ты все выдумал, покайся
                     li.comments__comment
                         div.comments__avatar.avatar
-                            img(src='img/avatar-3.png', alt='аватар пользователя')
+                            img(src='/img/avatar-3.png', alt='аватар пользователя')
                         div.comments__text
                             div.comments__head
                                 p Александр Марков •
@@ -85,7 +90,7 @@ block content
                 div.comments__footer.comments__footer--user
                     form(action='#', method='POST')
                         div.comments__avatar.avatar
-                            img(src='img/avatar-2.png', alt='аватар пользователя')
+                            img(src='/img/avatar-2.png', alt='аватар пользователя')
                         label
                             textarea(rows='1', placeholder='Присоединиться к обсуждению')
                         button.comments__button.button.button--colored(type='submit') Опубликовать
