--- a/src/express/templates/search.pug
+++ b/src/express/templates/search.pug
@@ -1,5 +1,10 @@
 extends ./layouts/layout
 
+block vars
+    - const bodyClass= ``
+    - const wrapperClass= `wrapper-color`
+    - const mainClass= ``
+
 block content
     section.search-page
         div.search-page__wrapper
