--- a/src/express/templates/my.pug
+++ b/src/express/templates/my.pug
@@ -9,28 +9,12 @@ block content
     section.main-page__notes.notes
         h1.notes__title Мои записи
         ul.notes__list
-            li.notes__list-item
-                time.notes__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                a.notes__item-text(href='#') Huawei открыла в России предзаказ на смартфон Mate 30 Pro без сервисов Google
-                button.notes__button.button.button--close-item(type='button')
-                    span.visually-hidden Закрыть строку списка
-            li.notes__list-item
-                time.notes__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                a.notes__item-text(href='#') Facebook разрешит пользователям копировать фотографии из соцсети в «Google Фото»
-                button.notes__button.button.button--close-item(type='button')
-                    span.visually-hidden Закрыть строку списка
-            li.notes__list-item
-                time.notes__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                a.notes__item-text(href='#') Huawei открыла в России предзаказ на смартфон Mate 30 Pro без сервисов Google
-                button.notes__button.button.button--close-item(type='button')
-                    span.visually-hidden Закрыть строку списка
-            li.notes__list-item
-                time.notes__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                a.notes__item-text(href='#') Facebook разрешит пользователям копировать фотографии из соцсети в «Google Фото»
-                button.notes__button.button.button--close-item(type='button')
-                    span.visually-hidden Закрыть строку списка
-            li.notes__list-item.notes__list-item--last
-                time.notes__item-time(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                a.notes__item-text(href='#') Facebook разрешит пользователям копировать фотографии из соцсети в «Google Фото»
+            each article in articles
+                li.notes__list-item
+                    time.notes__item-time(datetime= article.createdDate)= `${new Date(article.createdDate).getDate().toString().padStart(2, `0`)}.${(new Date(article.createdDate).getMonth() + 1).toString().padStart(2, `0`)}.${new Date(article.createdDate).getFullYear()}, ${new Date(article.createdDate).getHours().toString().padStart(2, `0`)}:${new Date(article.createdDate).getMinutes().toString().padStart(2, `0`)}`
+                    a.notes__item-text(href='#')= article.title
+                    button.notes__button.button.button--close-item(type='button')
+                        span.visually-hidden Закрыть строку списка
+
                 button.notes__button.button.button--close-item(type='button')
                     span.visually-hidden Закрыть строку списка
