--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -13,80 +13,31 @@ block content
             div.post__wrapper
                 div.post__head
                     a.post__backwards.button.button--backwards(href='#') Назад
-                    time.post__date(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                    h2.post__title.title.title--main AirPods в один клик
+                    time.post__date(datetime= article.createdDate)= `${new Date(article.createdDate).getDate().toString().padStart(2, `0`)}.${(new Date(article.createdDate).getMonth() + 1).toString().padStart(2, `0`)}.${new Date(article.createdDate).getFullYear()}, ${new Date(article.createdDate).getHours().toString().padStart(2, `0`)}:${new Date(article.createdDate).getMinutes().toString().padStart(2, `0`)}`
+                    h2.post__title.title.title--main= article.title
                     ul.post__themes.themes
-                        li.themes__item
-                            a.themes__item-link(href='#')
-                                | Автомобили
-                                sup 88
-                            button.themes__remove-btn(type='button') Удалить категорию
-                        li.themes__item
-                            a.themes__item-link(href='#')
-                                | Удаленная работа
-                                sup 13
-                            button.themes__remove-btn(type='button') Удалить категорию
-                        li.themes__item
-                            a.themes__item-link(href='#')
-                                | Бизнес
-                                sup 13
-                            button.themes__remove-btn(type='button') Удалить категорию
+                        each category in article.category
+                            li.themes__item
+                                a.themes__item-link(href='#')= category
+                                    sup 88
+                                button.themes__remove-btn(type='button') Удалить категорию
                 div.post__picture
                     img(src='/img/sea-fullsize@1x.jpg', alt='пейзаж море, скалы, пляж')
                 div.post__text
-                    h3 Бирюзовое доверие
-                    p
-                        | У Apple иногда попадаются интерфейсы, за которые создателей хочется сильно
-                        | поругать
-                        | — к примеру интерфейс
-                        | публикации приложения в AppStore, для которого я уже неделю восстановливаю свой аккаунт разработчика.
-                    p
-                        | Или интерфейс подключения AirPods на макбуке. Чтобы переключить наушники между
-                        | телефоном и компьютером,
-                        | нужно сначала нажать на значок звука, затем дождаться, когда в списке устройств появятся наушники, потом
-                        | нажать на них и дождаться, пока случится вся магия подключения. Иногда по загадочным причинам магия не
-                        | случается, и операцию нужно повторить, выполняя все те же клики-ожидания-клики — бесит.
+                    p= article.fullText
         div.post__wrapper.post__wrapper--comments
             section.post__comments.comments
                 h2.comments__title.title.title--middle Комментарии
                 ul.comments__list
-                    li.comments__comment
-                        div.comments__avatar.avatar
-                            img(src='/img/avatar-1.png', alt='аватар пользователя')
-                        div.comments__text
-                            div.comments__head
-                                p Евгений Петров •
-                                time.comments__date(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                            p.comments__message Автор, ты все выдумал, покайся
-                    li.comments__comment
-                        div.comments__avatar.avatar
-                            img(src='/img/avatar-5.png', alt='аватар пользователя')
-                        div.comments__text
-                            div.comments__head
-                                p Александр Марков •
-                                time.comments__date(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                            p.comments__message
-                                | Конечно, прежде чем так писать, нужно
-                                | искренне
-                                | приложить усилия, чтобы разобраться — не все люди умеют выражать свои мысли.
-                    li.comments__comment
-                        div.comments__avatar.avatar
-                            img(src='/img/avatar-4.png', alt='аватар пользователя')
-                        div.comments__text
-                            div.comments__head
-                                p Евгений Петров •
-                                time.comments__date(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                            p.comments__message Автор, ты все выдумал, покайся
-                    li.comments__comment
-                        div.comments__avatar.avatar
-                            img(src='/img/avatar-3.png', alt='аватар пользователя')
-                        div.comments__text
-                            div.comments__head
-                                p Александр Марков •
-                                time.comments__date(datetime='2019-03-21T20:33') 21.03.2019, 20:33
-                            p.comments__message
-                                | Конечно, прежде чем так писать, нужно
-                                | искренне приложить усилия, чтобы разобраться — не все люди умеют выражать свои мысли.
+                    each comment in article.comments
+                        li.comments__comment
+                            div.comments__avatar.avatar
+                                img(src='/img/avatar-1.png', alt='аватар пользователя')
+                            div.comments__text
+                                div.comments__head
+                                    p Евгений Петров •
+                                    time.comments__date(datetime='2019-03-21T20:33') 21.03.2019, 20:33
+                                p.comments__message= comment.text
                 div.comments__footer.comments__footer--user
                     form(action='#', method='POST')
                         div.comments__avatar.avatar
